Closed
Bug 227175
Opened 22 years ago
Closed 22 years ago
Collation should be freed [@nsMsgDBFolder]
Categories
(Core :: Internationalization: Localization, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.7alpha
People
(Reporter: dewildt, Assigned: neil)
Details
(Keywords: memory-leak)
Attachments
(4 files)
|
12.86 KB,
text/plain
|
Details | |
|
79.42 KB,
text/plain
|
Details | |
|
618 bytes,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
dbaron
:
approval1.6b+
|
Details | Diff | Splinter Review |
|
3.05 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; de-AT; rv:1.6b) Gecko/20031125
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; de-AT; rv:1.6b) Gecko/20031125
Maybe I'm wrong, but I think that the collation (kCollationKeyGenerator) created
in nsMsgDBFolder::createCollationKeyGenerator is not freed.
More details in the attachments (tree.log)
Reproducible: Always
Steps to Reproduce:
1. Start Mozilla
2. Stop Mozilla
Actual Results:
Memory leak
| Reporter | ||
Comment 1•22 years ago
|
||
I think the source of the leak is in (or below)
nsMsgDBFolder::createCollationKeyGenerator
| Reporter | ||
Comment 2•22 years ago
|
||
The leaking classes nsCollation, nsCollationWin and nsBasicEncoder depends on
this leak.
| Assignee | ||
Comment 3•22 years ago
|
||
My bad - I converted a bunch of atoms to a static atom table and inadvertantly
deleted the release of kCollationKeyGenerator at the same time.
Assignee: general → neil.parkwaycc.co.uk
| Assignee | ||
Comment 4•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #136582 -
Flags: superreview?(bienvenu)
Attachment #136582 -
Flags: review?(bienvenu)
Updated•22 years ago
|
Severity: major → critical
Comment 5•22 years ago
|
||
Comment on attachment 136582 [details] [diff] [review]
Fix regression
this variable should be called gCollationKeyGenerator, not k - it's global, not
const - that might be why you forgot to free it :-) feel free to fix that as
well.
Attachment #136582 -
Flags: superreview?(bienvenu)
Attachment #136582 -
Flags: superreview+
Attachment #136582 -
Flags: review?(bienvenu)
Attachment #136582 -
Flags: review+
| Assignee | ||
Comment 6•22 years ago
|
||
Comment on attachment 136582 [details] [diff] [review]
Fix regression
Low-risk memory leak regression fix (I'll fix the variable name issue in 1.7a).
Attachment #136582 -
Flags: approval1.6b?
Attachment #136582 -
Flags: approval1.6b? → approval1.6b+
| Assignee | ||
Comment 7•22 years ago
|
||
Fix checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 8•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #136638 -
Flags: superreview?(bienvenu)
Attachment #136638 -
Flags: review?(bienvenu)
Comment 9•22 years ago
|
||
Comment on attachment 136638 [details] [diff] [review]
variable name change as requested
thx
Attachment #136638 -
Flags: superreview?(bienvenu)
Attachment #136638 -
Flags: superreview+
Attachment #136638 -
Flags: review?(bienvenu)
Attachment #136638 -
Flags: review+
| Assignee | ||
Comment 10•22 years ago
|
||
Reopening to track variable name issue.
Severity: critical → trivial
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Target Milestone: --- → mozilla1.7alpha
| Assignee | ||
Comment 11•22 years ago
|
||
Fix checked in.
Status: REOPENED → RESOLVED
Closed: 22 years ago → 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•