Bug 227175 Collation should be freed r/sr=bienvenu a=dbaron